⚡️ IMPROVE: update sample env

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,7 @@ PLUGIN_MISC_ILLUMINATE=true
 PLUGIN_MISC_SURROUND=true
 PLUGIN_MISC_SPECTRE=true
 PLUGIN_MISC_VIM_TMUX=true
+PLUGIN_MISC_VIM_MAXIMIZER=true
 PLUGIN_MISC_SESSION=true
 PLUGIN_MISC_RENAME=true
 PLUGIN_MISC_SILICON=true
